--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,20 +1,21 @@
 {
   "name": "rendezvous",
   "short_name": "rendezvous",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#FB6359",
+  "theme_color": "#FB6359",
+  "orientation": "any",
   "icons": [
     {
-      "src": "/static/img/icons/android-chrome-192x192.png",
+      "src": "/static/img/icons/pinterest_profile_image.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/static/img/icons/android-chrome-512x512.png",
+      "src": "/static/img/icons/pinterest_profile_image.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "start_url": "/index.html",
-  "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#4DBA87"
+  ]
 }
