--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@firebase/app": "^0.3.9",
+    "@firebase/auth": "^0.9.3",
+    "@firebase/firestore": "^1.0.4",
+    "firebase": "^5.8.4",
     "material-design-icons-iconfont": "^4.0.5",
+    "oauthio-web": "^0.6.2",
     "vue": "^2.5.2",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
@@ -38,10 +43,12 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
+    "node-sass": "^4.11.0",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
     "rimraf": "^2.6.2",
+    "sass-loader": "^7.1.0",
     "semver": "^5.4.1",
     "shelljs": "^0.7.8",
     "sw-precache-webpack-plugin": "^0.11.4",
