--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/src/api/firebase
+/src/api/firebase/firebaseConfig.js
 # Editor directories and files
 .idea
 *.suo
