--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "sass-loader": "^7.1.0",
     "semver": "^5.4.1",
     "shelljs": "^0.7.8",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "sw-precache-webpack-plugin": "^0.11.4",
     "uglify-es": "^3.1.3",
     "url-loader": "^0.6.2",
