--- a/functions/package.json
+++ b/functions/package.json
@@ -8,9 +8,12 @@
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
+  "engines": {
+    "node": "8"
+  },
   "dependencies": {
     "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.1.0",
+    "firebase-functions": "^3.2.0",
     "nodemailer": "^6.3.0"
   },
   "private": true
