--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@firebase/app": "^0.3.9",
     "@firebase/auth": "^0.9.3",
     "@firebase/firestore": "^1.0.4",
+    "chart.js": "^2.8.0",
+    "chartkick": "^3.1.1",
     "firebase": "^5.8.4",
+    "hchs-vue-charts": "^1.2.8",
     "material-design-icons-iconfont": "^4.0.5",
     "oauthio-web": "^0.6.2",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.4.2",
+    "vue-chartkick": "^0.5.2",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.7.4",
@@ -26,6 +31,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
+    "axios": "^0.19.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
